--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,30 +8,30 @@
 </ion-header>
       
 <ion-content padding>
-<ion-grid style="padding: 10px;">
+<ion-grid class="pd-10">
     <ion-row align-items-center>
-    <ion-col col-12 item-left style=" text-align: center;">
+    <ion-col col-12 item-left class="center">
         <img text-center src="assets/img/AboutMe.png" class="developer-image"/>
     </ion-col>
     </ion-row>
     <ion-row align-items-center>
-    <ion-col col-12 item-left style="text-align: center;">
+    <ion-col col-12 item-left class="center">
         <ion-label>{{'PAGE_ABOUT.DEVELOPED_BY' | translate}}</ion-label>
     </ion-col>
     </ion-row>
     <ion-row align-items-center>
-    <ion-col col-12 item-left style="text-align: center;">
+    <ion-col col-12 item-left class="center">
         <ion-label><h2>Jordi Las Cordero</h2></ion-label>
     </ion-col>
     </ion-row>
     <ion-row align-items-center>
-    <ion-col col-12 item-left style="text-align: center; color: #1da1f2;">
+    <ion-col col-12 item-left class="center color-tweeter">
         <ion-label><h4><i class="fa fa-twitter"></i> @JordiDotNet</h4></ion-label>
     </ion-col>
     </ion-row>
 
     <ion-row align-items-center>
-        <ion-col col-12 item-left style="text-align: center;">
+        <ion-col col-12 item-left class="center">
             <br/>
             <h4>{{ 'PAGE_ABOUT.VERSION' | translate }}: {{version}}</h4>
         </ion-col>
