--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -11,24 +11,24 @@
 
     <ion-item-group>
         <ion-item-divider color="header-bg">
-            <div item-left  style="font-size: 1.3em; font-weight: bold;">{{"PAGE_SETTINGS.APP_SETTINGS" | translate}}</div>
+            <div item-left  class="lb-settings">{{"PAGE_SETTINGS.APP_SETTINGS" | translate}}</div>
         </ion-item-divider>
     </ion-item-group>  
             
-    <ion-grid style="padding: 10px;">
+    <ion-grid class="pd-10">
         <ion-row align-items-center>
-            <ion-col col-12 item-left style="text-align: left;">
-                <ion-label style="font-size: 1.4em">{{"PAGE_SETTINGS.GLOBAL_SETTINGS" | translate}}</ion-label>
+            <ion-col col-12 class="lb-global" item-left>
+                <ion-label>{{"PAGE_SETTINGS.GLOBAL_SETTINGS" | translate}}</ion-label>
             </ion-col>
         </ion-row>
             
         <ion-row align-items-center>
             <ion-col col-1></ion-col>
-            <ion-col col-7 item-left style="text-align: left;">
+            <ion-col col-7 item-left class="left">
             <ion-label>{{"PAGE_SETTINGS.LANGUAGE" | translate}}</ion-label>
             </ion-col>
             <ion-col col-4  text-right>
-            <ion-select text-right [(ngModel)]="currentLang" class="form-control" style="min-width: 100%;" (ionChange)="languageChange($event)">
+            <ion-select text-right [(ngModel)]="currentLang" class="form-control" class="form-select" (ionChange)="languageChange($event)">
                 <ion-option text-right *ngFor="let lang of _langs" value="{{lang.value}}" >{{lang.text}}</ion-option>
             </ion-select>
             </ion-col>
